--- a/UI/src/main/resources/templates/login.html
+++ b/UI/src/main/resources/templates/login.html
@@ -202,16 +202,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#myPage">Sadra</a>
+            <a class="navbar-brand" href="#myPage">Guest</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
-            <form class="navbar-form navbar-right" th:action="@{/logout}" method="post">
-                <button type="submit" class="btn  btn-sm btn-danger"><span class="glyphicon glyphicon-log-out"></span> Logout</button>
-            </form>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/">Home</a></li>
                 <li><a href="/invoices">Invoices</a></li>
-
             </ul>
         </div>
     </div>
@@ -219,22 +215,30 @@
 
 <div class="jumbotron text-center">
     <h1>Doctor House Hospital</h1>
-    <p><br/>Add new Patient</p>
-    <form class="form-inline" th:object="${newPatient}" th:action="@{/}" method="post">
-        <div class="form-group">
-            <div class="col-sm-10">
-                <input type="text" class="form-control"  th:field="*{name}" placeholder="Patient Name" required>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-10">
-                <input type="text" class="form-control" size="30" th:field="*{symptoms}" placeholder="Symptoms (Separate by ',')" required>
-            </div>
-        </div>
+    <div th:if="${param.logout}" class="alert alert-success fade in">
+        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+        <strong>Success!</strong> You have been logged out.
+    </div>
+    <div th:if="${param.error}" class="alert alert-danger fade in">
+        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+        <strong>Error!</strong> There was an error, please try again.
+    </div>
 
+    <p><br/>Login</p>
+    <form class="form-inline" th:action="@{/login}" method="post">
+        <div class="input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+            <input type="text" class="form-control"  name="username" placeholder="Username" autofocus="autofocus" required>
+        </div>
+        <br/><br/>
+        <div class="input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+            <input type="password" class="form-control" name="password"  placeholder="Password" required>
+        </div>
+        <br/><br/>
         <div class="form-group">
             <div class="col-sm-10">
-                <button type="submit" class="btn btn-default">Submit</button>
+                <button type="submit" class="btn btn-default"> <span class="glyphicon glyphicon-log-in"></span> Login</button>
             </div>
         </div>
     </form>
